webmin: consistently refer to Netatalk as an AFP File Server
Consistently refer to Netatalk as an AFP File Server,
to emphasize standards compliance and cross-platform support

--- a/contrib/webmin_module/help/configs.html
+++ b/contrib/webmin_module/help/configs.html
@@ -1,6 +1,6 @@
 <header>Netatalk Help</header>
 
-<p>For general information on how to configure and operate Netatalk, refer to the <a href="https://netatalk.io/manual/en/">Netatalk Manual</a>.</p>
+<p>For general information on how to configure and operate the AFP File Server, refer to the <a href="https://netatalk.io/manual/en/">Netatalk Manual</a>.</p>
 
 <p>The Server and Volume options are explained in the <a href="https://netatalk.io/manual/en/afp.conf.5">afp.conf manual page</a>.</p>
 
